--- a/2016-05-27/source/GS/728x90.css
+++ b/2016-05-27/source/GS/728x90.css
@@ -515,7 +515,7 @@
 }
 
 .banner-container{
-  background-color: #000;
+  background-color: #fff;
   overflow: hidden;
 }
 
@@ -567,7 +567,7 @@
   height: 25px;
   background: url('./images/728x90_header.png') no-repeat center center;
   top: 6px;
-  left: 566px;
+  left: 556px;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
@@ -595,11 +595,11 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .headline {
-  width: 330px;
-  height: 60px;
+  width: 221px;
+  height: 76px;
   background: url('./images/728x90_headline.png') no-repeat center center;
-  top: 16px;
-  left: 215px;
+  top: 10px;
+  left: 297px;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
@@ -631,7 +631,7 @@
   height: 32px;
   background: url('./images/728x90_cta.png') no-repeat center center;
   bottom: 23px;
-  right: 21px;
+  right: 31px;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
@@ -663,7 +663,7 @@
   height: 12px;
   background: url('./images/728x90_option_text.png') no-repeat center center;
   bottom: 5px;
-  right: 21px;
+  right: 31px;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
