--- a/2016-06-14/source/320x50.css
+++ b/2016-06-14/source/320x50.css
@@ -174,7 +174,7 @@
     visibility: visible;
   }
   100% { 
-    -webkit-transform: translate(0,40px);
+    -webkit-transform: translate(0,45px);
     visibility: visible;
   }
 }
@@ -185,7 +185,7 @@
     visibility: visible;
   }
   100% { 
-    -moz-transform: translate(0,40px);
+    -moz-transform: translate(0,45px);
     visibility: visible;
   }
 }
@@ -195,21 +195,21 @@
     visibility: visible;
   }
   100% { 
-    transform: translate(0,40px);
+    transform: translate(0,45px);
     visibility: visible;
   }
 }
 
 @-webkit-keyframes animateChannel1-Scale-Fadeout {
   0% {
-    -webkit-transform: scale(1,1);
+    -webkit-transform: scale(1.2,1.2);
     visibility: visible;
   }
-  80% {
-    -webkit-transform: scale(1,1);
+  60% {
+    -webkit-transform: scale(1.2,1.2);
     visibility: visible;
   }
-  50% {
+  85% {
     -webkit-transform: scale(0.8,0.8);
     visibility: visible;
   }
@@ -227,14 +227,14 @@
 
 @-moz-keyframes animateChannel1-Scale-Fadeout {
   0% {
-    -moz-transform: scale(1,1);
+    -moz-transform: scale(1.2,1.2);
     visibility: visible;
   }
-  80% {
-    -moz-transform: scale(1,1);
+  60% {
+    -moz-transform: scale(1.2,1.2);
     visibility: visible;
   }
-  50% {
+  85% {
     -moz-transform: scale(0.8,0.8);
     visibility: visible;
   }
@@ -252,14 +252,14 @@
 
 @keyframes animateChannel1-Scale-Fadeout {
   0% {
-    transform: scale(1,1);
+    transform: scale(1.2,1.2);
     visibility: visible;
   }
-  80% {
-    transform: scale(1,1);
+  60% {
+    transform: scale(1.2,1.2);
     visibility: visible;
   }
-  50% {
+  85% {
     transform: scale(0.8,0.8);
     visibility: visible;
   }
@@ -484,6 +484,7 @@
 .banner-container{
   background-color: #fff;
   overflow: hidden;
+  border: 1px solid red;
 }
 
 .content-container{
@@ -514,11 +515,12 @@
 }
 
 .logo {
-  width: 27px;
-  height: 13px;
+  width: 40px;
+  height: 19px;
   background: url('./images/320x50_logo.png') no-repeat center center;
   background-size: 100% auto;
-  top: 18px;
+  top: 50%;
+  margin-top: -9px;
   left: 6px;
 }
 .round {
@@ -537,12 +539,13 @@
   animation: fadeOut 1s ease-in-out 2.5s forwards;
 }
 .title {
-  width: 95px;
+  width: 98px;
   height: 18px;
   background: url('./images/320x50_title.png') no-repeat center center;
   background-size: 100% auto;
-  top: 15px;
-  right: 8px;
+  top: 50%;
+  margin-top: -9px;
+  right: 20px;
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   z-index: 1;
@@ -561,11 +564,12 @@
   animation: fadeOut 1s ease-in-out 6s forwards;
 }
 .text {
-  width: 128px;
-  height: 23px;
+  width: 148px;
+  height: 24px;
   background: url('./images/320x50_text.png') no-repeat center center;
   background-size: 100% auto;
-  top: 15px;
+  top: 50%;
+  margin-top: -12px;
   right: 4px;
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
