--- a/reuse/reuse-300x250.css
+++ b/reuse/reuse-300x250.css
@@ -501,6 +501,56 @@
   }
 }
 
+/*-- slide down fade in --*/
+@-webkit-keyframes slideDownFadeIn {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: translate(0,-20px);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideDownFadeIn {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: translate(0,-20px);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: translate(0,0);
+  }
+}
+@-o-keyframes slideDownFadeIn {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -o-transform: translate(0,-20px);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -o-transform: translate(0,0);
+  }
+}
+@keyframes slideDownFadeIn {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    transform: translate(0,-20px);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0,0);
+  }
+}
+
 /*-------------------------------------------*/
 .absolute {
   position: absolute;
