--- a/2016-08-11/source/160x600.css
+++ b/2016-08-11/source/160x600.css
@@ -194,28 +194,34 @@
 @-webkit-keyframes zoomAnimation {
   0%   {
     visibility: visible;
+    -webkit-box-shadow: 0px 0px 0px 0px #acacac;
     -webkit-transform: scale(1);
   }
   50% {
     visibility: visible;
+    -webkit-box-shadow: 0px 6px 6px 1px #acacac;
     -webkit-transform: scale(1.2);
   }
   100% { 
     visibility: visible;
+    -webkit-box-shadow: 0px 0px 0px 0px #acacac;
     -webkit-transform: scale(1);
   }
 }
 @-moz-keyframes zoomAnimation {
   0%   {
     visibility: visible;
+    -moz-box-shadow: 0px 0px 0px 0px #acacac;
     -moz-transform: scale(1);
   }
   50% {
     visibility: visible;
+    -moz-box-shadow: 0px 6px 6px 1px #acacac;
     -moz-transform: scale(1.2);
   }
   100% { 
     visibility: visible;
+    -moz-box-shadow: 0px 0px 0px 0px #acacac;
     -moz-transform: scale(1);
   }
 }
@@ -223,13 +229,16 @@
   0%   {
     visibility: visible;
     transform: scale(1);
+    box-shadow: 0px 0px 0px 0px #acacac;
   }
   50% {
     visibility: visible;
+    box-shadow: 0px 6px 6px 1px #acacac;
     transform: scale(1.2);
   }
   100% { 
     visibility: visible;
+    box-shadow: 0px 0px 0px 0px #acacac;
     transform: scale(1);
   }
 }
@@ -292,11 +301,11 @@
   -ms-transform: scale(1.267);
   transform: scale(1.267);
 
-  -webkit-animation: zoomOut 1s linear 2s forwards;
-  -moz-animation: zoomOut 1s linear 2s forwards;
-  -ms-animation: zoomOut 1s linear 2s forwards;
-  -o-animation: zoomOut 1s linear 2s forwards;
-  animation: zoomOut 1s linear 2s forwards;
+  -webkit-animation: zoomOut 2s ease-in-out 1s forwards;
+  -moz-animation: zoomOut 2s ease-in-out 1s forwards;
+  -ms-animation: zoomOut 2s ease-in-out 1s forwards;
+  -o-animation: zoomOut 2s ease-in-out 1s forwards;
+  animation: zoomOut 2s ease-in-out 1s forwards;
 }
 .cake {
   width: 303px;
@@ -383,6 +392,11 @@
   background-size: 100% 100%;
   left: 16px;
   bottom: 11px;
+
+  -webkit-transform-origin: 50% 120%;
+  -moz-transform-origin: 50% 120%;
+  -ms-transform-origin: 50% 120%;
+  transform-origin: 50% 120%;
 
   -webkit-animation: zoomAnimation 0.5s linear 5s forwards;
   -moz-animation: zoomAnimation 0.5s linear 5s forwards;
