--- a/2016-09-03/source/728x90.css
+++ b/2016-09-03/source/728x90.css
@@ -500,9 +500,14 @@
   width: 162px;
   height: 90px;
   top: 0px;
-  right: 0px;
+  right: 10px;
 
   -webkit-animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
   -moz-animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
   animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
+}
+
+.border {
+  background: url('./images/728x90_border.png') no-repeat center center;
+  z-index: 800;
 }
